log
Thu 14 Sep 2023 07:14:15 PM UTC: 
 tests:  1|8
total_score: 0/70
ce46689
Thu 14 Sep 2023 07:24:05 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:28: error: ‘key1’ undeclared (first use in this function); did you mean ‘k1’?
   41 |         int k1 = *((int*) (key1));
      |                            ^~~~
      |                            k1
treemap.c:41:28: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:28: error: ‘key2’ undeclared (first use in this function); did you mean ‘k2’?
   42 |         int k2 = *((int*) (key2));
      |                            ^~~~
      |                            k2
treemap.c:43:18: error: returning ‘int’ from a function with return type ‘TreeMap *’ makes pointer from integer without a cast [-Werror=int-conversion]
   43 |         return k1<k2;
      |                ~~^~~
cc1: all warnings being treated as errors
Compilation failed
63fbd7a
Thu 14 Sep 2023 07:25:51 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:20: error: expected expression before ‘TreeMap’
   41 |     TreeMap* map = TreeMap(lower_than);
      |                    ^~~~~~~
treemap.c:41:14: error: unused variable ‘map’ [-Werror=unused-variable]
   41 |     TreeMap* map = TreeMap(lower_than);
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
bfcc15b
Thu 14 Sep 2023 07:36:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:14: error: unused variable ‘map’ [-Werror=unused-variable]
   41 |     TreeMap* map = (TreeMap *)malloc(sizeof(lower_than));
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
a38bc50
Thu 14 Sep 2023 07:38:20 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:16: error: unused variable ‘current’ [-Werror=unused-variable]
   44 |     TreeNode * current;
      |                ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ec93910
Thu 14 Sep 2023 07:38:37 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|8
total_score: 0/70
92edba6
Thu 14 Sep 2023 07:38:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:8: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   42 |     map->current = NULL;
      |        ^~
treemap.c:41:31: note: referencing an object of size 8 allocated by ‘malloc’
   41 |     TreeMap* map = (TreeMap *)malloc(sizeof(lower_than));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:43:8: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |     map->root = NULL;
      |        ^~
treemap.c:41:31: note: referencing an object of size 8 allocated by ‘malloc’
   41 |     TreeMap* map = (TreeMap *)malloc(sizeof(lower_than));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
37fc036
Thu 14 Sep 2023 07:39:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:8: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   42 |     map->current = NULL;
      |        ^~
treemap.c:41:31: note: referencing an object of size 8 allocated by ‘malloc’
   41 |     TreeMap* map = (TreeMap *)malloc(sizeof(lower_than));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:43:8: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   43 |     map->root = NULL;
      |        ^~
treemap.c:41:31: note: referencing an object of size 8 allocated by ‘malloc’
   41 |     TreeMap* map = (TreeMap *)malloc(sizeof(lower_than));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:44:8: error: array subscript ‘TreeMap[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   44 |     map->lower_than = lower_than;
      |        ^~
treemap.c:41:31: note: referencing an object of size 8 allocated by ‘malloc’
   41 |     TreeMap* map = (TreeMap *)malloc(sizeof(lower_than));
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
34159ae
Thu 14 Sep 2023 07:41:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:12: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   46 |     return Treemap*;
      |            ^~~~~~~
      |            TreeMap
treemap.c:46:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:46:20: error: expected expression before ‘;’ token
   46 |     return Treemap*;
      |                    ^
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9d0c5ab
